[gd_scene load_steps=9 format=3 uid="uid://dx1nu8q4xqpid"]

[ext_resource type="Script" uid="uid://chrv18u8sjmab" path="res://scripts/controllers/skill-node-controller.gd" id="1_cikux"]
[ext_resource type="Texture2D" uid="uid://806jqk74evve" path="res://graphics/skills/background.png" id="2_3v3bl"]
[ext_resource type="Shader" uid="uid://8dnmqbw8vyxk" path="res://shaders/colourizer.gdshader" id="2_lwhvw"]
[ext_resource type="Texture2D" uid="uid://b31igk5fvd774" path="res://graphics/skills/border.png" id="3_3v3bl"]
[ext_resource type="Texture2D" uid="uid://dkhbqn4tbpg6j" path="res://graphics/skills/skill-combat.png" id="4_3v3bl"]
[ext_resource type="Script" uid="uid://dn7e1eq26mgq8" path="res://scripts/ui/clickable-behaviour.gd" id="4_pfq4w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c6gft"]
shader = ExtResource("2_lwhvw")
shader_parameter/color = Vector3(0.6, 0.2, 0.3)

[sub_resource type="CircleShape2D" id="CircleShape2D_cikux"]
radius = 64.0

[node name="Skill" type="Node2D" node_paths=PackedStringArray("linkedSkillNodes")]
script = ExtResource("1_cikux")
linkedSkillNodes = [null]

[node name="Background Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_c6gft")
rotation = 19.9894
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_3v3bl")

[node name="Border Sprite" type="Sprite2D" parent="."]
rotation = 29.5046
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_3v3bl")

[node name="Skill Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_3v3bl")

[node name="Click Area" type="Area2D" parent="."]
script = ExtResource("4_pfq4w")

[node name="Click Shape" type="CollisionShape2D" parent="Click Area"]
shape = SubResource("CircleShape2D_cikux")

[connection signal="clicked" from="Click Area" to="." method="_on_click"]
[connection signal="input_event" from="Click Area" to="Click Area" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Click Area" to="." method="_show_background"]
[connection signal="mouse_exited" from="Click Area" to="." method="_hide_background"]
